@@ -1,3 +1,8 @@
+2025-12-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test29-start-file-process)
+	(tramp-test30-make-process): Adapt tests.
+
 2025-12-17  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test29-start-file-process)
